@@ -1,1 +1,6 @@
 # PA22.23AulasEx
+
+
+Voz amiga:
+> Add VM Options
+> --module-path "caminho do javafx\lib" --add-modules ALL-MODULE-PATH
